Standalone consumer process and fire forget updates (#10)
* added standalone consumer process, send message measurements and more tests

* ignored tests natively calling the gatling libs